Backend: Added finding status enum Added finding status to Finding model Added api endpoint to get finding statuses Added Title to Grype and Trivy
UI:
Added placeholder component for popout drawer
Reordered finding list view
Added getStatuses to Finding view