@@ -1,7 +1,7 @@
 package com.zacharykarpinski.luminousonion.controller;
 
-import com.zacharykarpinski.luminousonion.model.Finding;
 import com.zacharykarpinski.luminousonion.model.SourceTool;
+import com.zacharykarpinski.luminousonion.model.status.FindingStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -24,9 +24,21 @@ public class ResourcesController {
         List<Map<String,String>> sourceToolsMap = Stream.of(SourceTool.values())
                 .map(source -> Map.of("label", source.toString(), "value", source.name()))
                 .sorted(Comparator.comparing(m -> m.get("label"))) //Sort by human-readable label
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(sourceToolsMap);
+    }
+
+    @GetMapping("/findingstatuses")
+    public ResponseEntity<List<Map<String,String>>> getFindingStatuses() {
+
+        // Convert SourceTool enum to a list of Map<Label, Value> or Map<ToString(),Name>
+        List<Map<String,String>> statusMap = Stream.of(FindingStatus.values())
+                .map(status -> Map.of("label", status.toString(), "value", status.name()))
+                .sorted(Comparator.comparing(m -> m.get("label"))) //Sort by human-readable label
+                .toList();
+
+        return ResponseEntity.ok(statusMap);
     }
 
 }
